--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>omniscient-starter-pack</title>
   </head>
   <body>
-    <script src="/build/main.entry.js"></script>
+    <script src="build/main.entry.js"></script>
   </body>
 </html>
