--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>omniscient-starter-pack</title>
   </head>
   <body>
+    <div id="app"></div>
     <script src="build/main.entry.js"></script>
   </body>
 </html>
